styles: fix input border-radius on iOS

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -28,6 +28,8 @@
     padding: 20px 0;
     border: none;
     border-bottom: 2px solid #000;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-border-radius: 0px;
 }
 
 .form__input::placeholder {
